tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all type and fn and value defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.val_decl)),

        // then the expressions to evaluate, in order
        optional($.expression),
      ),

    fn_decl: $ =>
      seq(
        field("doc_comments", repeat($.doc_comment)),
        field("keyword_let", alias("let", $.keyword)),
        field("name", $.fn_identifier),
        optional(field("type_params", $.type_params)),
        field("params", $.fn_decl_params),
        field("symbol_colon", alias(":", $.symbol)),
        field("return_type", $.type_reference),
        field("symbol_equals", alias("=", $.symbol)),
        choice(
          seq($.indent, field("body", $.expression), $.dedent),
          seq(field("body", $.expression), optional($.newline)),
        ),
      ),
    fn_decl_params: $ => repeat1(choice($.unit, $.fn_decl_param)),
    type_decl: $ =>
      seq(
        field("doc_comments", repeat($.doc_comment)),
        field("keyword_type", alias("type", $.keyword)),
        field("name", $.type_identifier),
        optional(field("type_params", $.type_params)),
        field("symbol_equals", alias("=", $.symbol)),
        field("typ", $.type_decl_def),
      ),

    // Definition
    type_decl_def: $ =>
      choice(
        $.type_decl_def_alias,
        $.type_decl_def_record,
        $.type_decl_def_enum,
      ),

    //
    // Alias
    type_decl_def_alias: $ =>
      choice($.type_reference, seq($.indent, $.type_reference, $.dedent)),

    //
    // Record
    // e.g. `type Person = { name: String; age: Int }`
    _atom: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.bigint_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.record_update,
        $.qualified_val_or_fn_name,
        $.dbReference,
        $.paren_expression,
      ),

    // operand/value tier: an atom, a function application, or an infix chain.
    // `apply` is included so applications can be infix operands and values.
    simple_expression: $ =>
      choice(
        $._atom,
        $.apply,
        $.infix_operation,
      ),

    expression: $ =>
      choice(
        // `apply` is reachable via `simple_expression`; not listed separately
        // here (that would make it derivable two ways → grammar conflict).
        $.simple_expression,

        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.lambda_expression,
        $.pipe_expression,
        $.statement,
      ),

    paren_expression: $ =>
      seq(
        field("symbol_left_paren", alias("(", $.symbol)),
        field("expr", $.expression),
        field("symbol_right_paren", alias(")", $.symbol)),
      ),

    statement: $ =>
      prec.left(
        PREC.STATEMENT,
        seq(field("first", $.expression), field("next", $.expression)),
      ),

    //
    // Booleans
    bool_literal: $ => choice(/true/, /false/),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    string_literal: $ =>
      choice(
        seq(
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(field("content", $.string_content)),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(field("content", $.multiline_string_content)),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_content: $ =>
      repeat1(
        choice(
          // higher precedence than escape sequences
          token.immediate(prec(1, /[^\\"\n]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    string_segment: $ => choice($.string_literal, $.string_interpolation),

    //
    // List
    dict_literal: $ => dict_literal_base($, $.dict_content),
    dict_content: $ => dict_content_base($, $.dict_pair),
    dict_pair: $ => dict_pair_base($, $.expression),

    //
    // Tuples
    tuple_literal: $ =>
      tuple_literal_base($, $.expression, $.tuple_literal_the_rest),
    record_literal: $ => record_literal_base($, $.record_content),
    record_content: $ => record_content_base($, $.record_pair),
    record_pair: $ => record_pair_base($, $.expression),

    //
    // Record update
    // e.g. { RecordForUpdate { x = 4L; y = 1L } with y = 2L }
    enum_literal: $ => enum_literal_base($, $.enum_fields),
    enum_fields: $ => enum_fields_base($, $.expression),

    //
    // Infix operations
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
      ),

    //
    // If expressions
    field_access: $ =>
      prec(
        PREC.FIELDACCESS,
        seq(
          field(
            "expr",
            choice(
              $.variable_identifier,
              $.record_literal,
              $.paren_expression,
              $.field_access,
            ),
          ),
          field("symbol_dot", alias(".", $.symbol)),
          field("field_name", $.variable_identifier),
        ),
      ),

    //
    // DB reference
    let_pattern: $ => choice($.unit, $.lp_tuple, $.variable_identifier),

    //
    // Let expression
    let_expression: $ =>
      seq(
        field("keyword_let", alias("let", $.keyword)),
        choice(
          // a nested function definition: `let f (x: Int64) : Int64 = ...`. Only
          // a plain variable can name a fn (not unit or a tuple pattern). The
          // params/return-type are parsed but dropped when desugaring to a lambda
          // (lambdas are untyped); see parser/expr.dark.
          seq(
            field("fn_name", $.variable_identifier),
            optional(field("type_params", $.type_params)),
            field("params", $.fn_decl_params),
            field("symbol_colon", alias(":", $.symbol)),
            field("return_type", $.type_reference),
          ),
          // a plain let binding: `let <pattern> = ...`
          field("pattern", $.let_pattern),
        ),
        field("symbol_equals", alias("=", $.symbol)),
        choice(
          seq(field("expr", $.expression), "\n"),
          seq($.indent, field("expr", $.expression), $.dedent, optional("\n")),
        ),
        field("body", $.expression),
      ),

    //
    // Match expression
    // TODO : allow one-line match expressions (i.e. match x with | 1 -> ...)
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            seq(
              // args are `_atom`s (not `simple_expression`) so application
              // binds tighter than infix: `f a + b` is `(f a) + b`, and an
              // operator stops arg collection so `f x ++ g y` is `(f x) ++ (g y)`.
              field("args", repeat1($._atom)),
              optional($._function_boundary),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
        ),
      ),

    // ---------------------
    // Pipe expressions
    // ---------------------

    //
    // Pipe lambda
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    type_reference: $ => choice($.builtin_type, $.qualified_type_name),

    builtin_type: $ =>
      choice(
        /Unit/,
        /Bool/,
        /Int8/,
        /UInt8/,
        /Int16/,
        /UInt16/,
        /Int32/,
        /UInt32/,
        /Int64/,
        /UInt64/,
        /Int128/,
        /UInt128/,
        /Int/,
        /Float/,
        /Char/,
        /String/,
        /DateTime/,
        /Uuid/,
        /Blob/,
        $.list_type_reference,
        $.stream_type_reference,
        $.tuple_type_reference,
        $.dict_type_reference,
        $.fn_type_reference,
        $.variable_type_reference,

        $.db_type_reference,
      ),

    //
    // List<T>
    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    qualified_type_name: $ =>
      prec(
        1,
        seq(
          seq(
            repeat(seq($.module_identifier, alias(".", $.symbol))),
            field("type_identifier", $.type_identifier),
          ),
          optional(field("type_args", $.type_args)),
        ),
      ),

    type_args: $ =>
      seq(
        field("symbol_open_angle", alias(token.immediate("<"), $.symbol)),
        field("type_args_items", $.type_args_items),
        field("symbol_close_angle", alias(token.immediate(">"), $.symbol)),
      ),
    type_args_items: $ =>
      seq(
        $.type_reference,
        repeat(
          seq(field("symbol_comma", alias(",", $.symbol)), $.type_reference),
        ),
      ),

    // e.g. `LanguageTools in `PACKAGE.Darklang.LanguageTools.SomeType`
    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `Person` in `type MyPerson = ...`
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `newline` in `val newline = '\n'`
    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    /** e.g. `x` in `let double (x: Int) = x + x`
     *
     * for let bindings, params, etc. */
    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    // e.g. `Dict { ``Content-Length`` } = "0"`
    double_backtick_identifier: $ => token(seq("``", /[^`]+/, "``")),

    enum_case_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    newline: $ => /\n/,
