tree-sitter-darklang/test/corpus/exhaustive/exprs/dicts.txt
==================
Empty Dict
==================

Dict {}

---

(source_file
  (expression
    (simple_expression (dict_literal
      (keyword)
      (symbol)
      (symbol)))))



==================
Dict with one key
==================

Dict {a = 1L}

---

(source_file
  (expression
    (simple_expression (dict_literal
      (keyword)
      (symbol)
      (dict_content
        (dict_pair
          (variable_identifier)
          (symbol)
          (expression
            (simple_expression (int64_literal
              (digits
                (positive_digits))
              (symbol))))))
      (symbol)))))


==================
Dict with two keys
==================

Dict {a = 1L; b = 2L}

---

(source_file
  (expression
    (simple_expression (dict_literal
      (keyword)
      (symbol)
      (dict_content
        (dict_pair
          (variable_identifier)
          (symbol)
          (expression
            (simple_expression (int64_literal
              (digits
                (positive_digits))
              (symbol)))))
        (symbol)
        (dict_pair
          (variable_identifier)
          (symbol)
          (expression
            (simple_expression (int64_literal
              (digits
                (positive_digits))
              (symbol))))))
      (symbol)))))


==================
Dict with multiple keys
==================

Dict {a = 1L; b = 2L; c = 3L}

---

(source_file
  (expression
    (simple_expression (dict_literal
      (keyword)
      (symbol)
      (dict_content
        (dict_pair
          (variable_identifier)
          (symbol)
          (expression
            (simple_expression (int64_literal
              (digits
                (positive_digits))
              (symbol)))))
        (symbol)
        (dict_pair
          (variable_identifier)
          (symbol)
          (expression
            (simple_expression (int64_literal
              (digits
                (positive_digits))
              (symbol)))))
        (symbol)
        (dict_pair
          (variable_identifier)
          (symbol)
          (expression
            (simple_expression (int64_literal
              (digits
                (positive_digits))
              (symbol))))))
      (symbol)))))


==================
dict - key is a double_backtick_identifier
==================

Dict { ``Content-Length`` = 1L }

---

(source_file
  (expression
    (simple_expression
      (dict_literal
        (keyword)
        (symbol)
        (dict_content
          (dict_pair
            (double_backtick_identifier)
            (symbol)
            (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
          )
        )
        (symbol)
      )
    )
  )
)


==================
dict - multiple pairs indented
==================

Dict
  { key1 = "val1"
    key2 = "val1" }

---

(source_file
  (expression
    (simple_expression
      (dict_literal
        (keyword)
        (symbol)
        (dict_content
          (dict_pair
            (variable_identifier)
            (symbol)
            (expression
              (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))
            )
          )
          (newline)
          (dict_pair
            (variable_identifier)
            (symbol)
            (expression
              (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))
            )
          )
        )
        (symbol)
      )
    )
  )
)
