tree-sitter-darklang/test/corpus/exhaustive/exprs/field_access.txt
==================
field access
==================

person.name

---

(source_file
  (expression
    (simple_expression
      (field_access (variable_identifier)
        (symbol)
        (variable_identifier)
      )
    )
  )
)

==================
field access - paren defined Record
==================

(Person { name = "Janice" }).name

---

(source_file
  (expression
    (simple_expression
      (field_access
        (paren_expression
          (symbol)
          (expression
            (simple_expression
              (record_literal
                (qualified_type_name (type_identifier))
                (symbol)
                (record_content
                  (record_pair
                    (variable_identifier)
                    (symbol)
                    (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
                  )
                )
                (symbol))
            )
          )
          (symbol)
        )
        (symbol)
        (variable_identifier)
      )
    )
  )
)


==================
field access - nested
==================

person.address.street

---

(source_file
  (expression
    (simple_expression
      (field_access
        (field_access (variable_identifier)
          (symbol)
          (variable_identifier)
        )
        (symbol)
        (variable_identifier)
      )
    )
  )
)


==================
field access fn_call
==================

(getPerson()).name

---

(source_file
  (expression
    (simple_expression
      (field_access
        (paren_expression
          (symbol)
          (expression
            (simple_expression (apply (qualified_fn_name (fn_identifier)) (unit)))
          )
          (symbol)
        )
        (symbol)
        (variable_identifier)
      )
    )
  )
)


==================
field access fn_call - nested
==================

(getUser()).profile.name

---

(source_file
  (expression
    (simple_expression
      (field_access
        (field_access
          (paren_expression
            (symbol)
            (expression (simple_expression (apply (qualified_fn_name (fn_identifier)) (unit))))
            (symbol)
          )
          (symbol)
          (variable_identifier))
        (symbol)
        (variable_identifier)
      )
    )
  )
)
